# search-pipline-hitl

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.web  LANGCHAIN_CHEATSHEET.md  LEARNINGS.md  NAVIGATION.md  PLAN.md  PLAN_FINAL.md  PLAN_FINAL_CHECKLIST.md  PLAN_FINAL_PRIORITIES.md  README.md  WEB_UI_PLAN.md  api_adapters.py  api_models.py  api_runtime.py  architecture.md  cli_review.py  config.py  docker-compose.yml  generate_report_pdf.py  graph.py  llm_factory.py  nginx.conf  phase1_build_plan.html  poc_tool_choice.py  pyproject.toml  requirements.txt  run_pipeline.py  server.py  state.py  test_graph.py
agents/: human_review.py  report.py  search.py  synthesis.py
archived/: PLAN_REVISED.md
auth/: __init__.py  trials.py
evals/: __init__.py  eval.py  run_eval_topics.py
runs/: 20260405T103725Z_ai_agent_memory_architectures.json  20260406T150424Z_impact_of_ai_on_office_jobs_1476e8.json  20260408T151122Z_ai_agent_memory_architectures_fdcd4d.json  20260409T132251Z_impact_of_llms_on_software_developer_pro_c2d879.json  20260409T132533Z_state_of_multi_agent_ai_systems_in_2025_22c658.json  20260409T132807Z_langgraph_vs_crewai_vs_autogen_compariso_e57005.json  20260409T133102Z_prompt_engineering_techniques_for_struct_1f590e.json  20260409T133353Z_ai_agent_memory_architectures_79b546.json  20260409T134400Z_impact_of_llms_on_software_developer_pro_24295f.json  20260409T134656Z_state_of_multi_agent_ai_systems_in_2025_58f084.json  20260409T134932Z_langgraph_vs_crewai_vs_autogen_compariso_14c94f.json  20260409T135231Z_prompt_engineering_techniques_for_struct_1b91b4.json  20260409T135511Z_ai_agent_memory_architectures_07530f.json
tests/: conftest.py  test_agents.py  test_evals.py  test_graph.py  test_human_review.py  test_report.py  test_server.py  test_state.py  test_synthesis.py
tools/: web.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  stream.ts  types.ts
web/src/components/: DraftSourcesTab.tsx  EvaluationTab.tsx  LogTab.tsx  NewRunPanel.tsx  PipelineGraph.tsx  ReviewPanel.tsx  Sidebar.tsx  TopBar.tsx  primitives.tsx
web/src/styles/: fonts.css  global.css  tokens.css
